added in self the collect region names

--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,15 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
     "\n",
+    "GET_TIF_STR = \"*.tif\"\n",
     "\n",
-    "GET_TIF_STR = \"*.tif\""
+    "SPLIT_TILES_NAMES_STR = '_'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
