--- a/nbs/utilities.ipynb
+++ b/nbs/utilities.ipynb
@@ -34,7 +34,6 @@
    "source": [
     "#|hide\n",
     "#|export\n",
-    "import rasterio\n",
     "import glob\n",
     "\n",
     "from flood_exercise import const_vals as CONST"
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,17 +50,17 @@
     "def load_tif_paths(\n",
     "    tif_path : str , # path to the folder where all the tifs are located\n",
     "    )-> list :\n",
-    "  \n",
-    "    \"\"\"\n",
-    "    Takes a folder path containing TIFF files and returns a list of paths\n",
-    "    that can be read by rasterio.\n",
     "\n",
-    "    Parameters:\n",
-    "        folder_path (str): The path to the folder containing TIFF files.\n",
+    "    # \"\"\"\n",
+    "    # Takes a folder path containing TIFF files and returns a list of paths\n",
+    "    # that can be read by rasterio.\n",
     "\n",
-    "    Returns:\n",
-    "        list: A list of paths that can be read by rasterio.\n",
-    "    \"\"\"\n",
+    "    # Parameters:\n",
+    "    #     folder_path (str): The path to the folder containing TIFF files.\n",
+    "\n",
+    "    # Returns:\n",
+    "    #     list: A list of paths that can be read by rasterio.\n",
+    "    # \"\"\"\n",
     "    path_list = []\n",
     "    for file in glob.glob(tif_path+'/'+CONST.GET_TIF_STR):\n",
     "        path_list.append(file)\n",
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -485,34 +484,22 @@
        " 'D:\\\\git\\\\flood_exercise\\\\S2\\\\USA_58086_S2Hand.tif']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "load_tif_paths(tif_path=r'D:\\git\\flood_exercise\\S2')"
+    "list_of_files=load_tif_paths(tif_path=r\"D:\\git\\flood_exercise\\S2\")\n",
+    "list_of_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'*.tif'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CONST.GET_TIF_STR"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
