--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -43,7 +43,10 @@
     "\n",
     "GET_TIF_STR = \"*.tif\"\n",
     "\n",
-    "SPLIT_TILES_NAMES_STR = '_'"
+    "SPLIT_TILES_NAMES_STR = '_'\n",
+    "\n",
+    "REGION_STR ='region'\n",
+    "PATH_STR = 'path'"
    ]
   },
   {
