--- a/nbs/statistics.ipynb
+++ b/nbs/statistics.ipynb
@@ -59,12 +59,12 @@
     "      # get the tiles paths\n",
     "      self.list_of_files = utils_func.load_tif_paths(path_to_imgs)\n",
     "\n",
-    "      self.collect_results = {'path' : [] , 'region' : []}\n",
+    "      self.collect_results = {CONST.PATH_STR : [] , CONST.REGION_STR : []}\n",
     "\n",
     "      for path in self.list_of_files:\n",
     "         region = self._get_region_name_(path)\n",
-    "         self.collect_results['path'] = path\n",
-    "         self.collect_results['region']=region\n",
+    "         self.collect_results[CONST.PATH_STR] = path\n",
+    "         self.collect_results[CONST.REGION_STR]=region\n",
     "\n",
     "\n",
     "  def _get_region_name_(self,\n",
