adding image stats function

--- a/nbs/statistics.ipynb
+++ b/nbs/statistics.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,13 +68,28 @@
     "\n",
     "\n",
     "  def _get_region_name_(self,\n",
-    "                        path : str , # path of image , assuming that the first word in the file name is the region name\n",
+    "                        tile_name : str , # path of image , assuming that the first word in the file name is the region name\n",
     "                        ):\n",
+    "     \"\"\"\n",
+    "     Takes a string of images from the type \"region_id_label.tif and extract the region name.\n",
+    "     for example, for \"Bolivia_23014_S2Hand.tif\" it will return Bolivia\n",
+    "     Parameters:\n",
+    "     folder_path (str): The path to the folder containing TIFF files.\n",
+    "\n",
+    "     Returns:\n",
+    "     string: Name of the region , extracted from the tile name \n",
+    "     \"\"\"\n",
     "     \n",
-    "     region = path.split(CONST.SPLIT_TILES_NAMES_STR)[0]\n",
+    "     region = tile_name.split(CONST.SPLIT_TILES_NAMES_STR)[0]\n",
     "\n",
     "\n",
     "     return region\n",
+    "  \n",
+    "  def _img_statistics_(self,\n",
+    "                       path : str , # path to image (tif file)\n",
+    "                       ):\n",
+    "     \n",
+    "     \n",
     "     \n",
     "\n",
     "     \n",
@@ -85,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +110,7 @@
        " 'region': 'D:\\\\git\\\\flood'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
