--- a/nbs/utilities.ipynb
+++ b/nbs/utilities.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,16 @@
     "    tif_path : str , # path to the folder where all the tifs are located\n",
     "    )-> list :\n",
     "\n",
-    "    # \"\"\"\n",
-    "    # Takes a folder path containing TIFF files and returns a list of paths\n",
-    "    # that can be read by rasterio.\n",
+    "    \"\"\"\n",
+    "    Takes a folder path containing TIFF files and returns a list of paths\n",
+    "    that can be read by rasterio.\n",
     "\n",
-    "    # Parameters:\n",
-    "    #     folder_path (str): The path to the folder containing TIFF files.\n",
+    "    Parameters:\n",
+    "        folder_path (str): The path to the folder containing TIFF files.\n",
     "\n",
-    "    # Returns:\n",
-    "    #     list: A list of paths that can be read by rasterio.\n",
-    "    # \"\"\"\n",
+    "    Returns:\n",
+    "        list: A list of paths that can be read by rasterio.\n",
+    "    \"\"\"\n",
     "    path_list = []\n",
     "    for file in glob.glob(tif_path+'/'+CONST.GET_TIF_STR):\n",
     "        path_list.append(file)\n",
