testing bands stats1

--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,11 @@
     "SPLIT_TILES_NAMES_STR = '_'\n",
     "\n",
     "REGION_STR ='region'\n",
-    "PATH_STR = 'path'"
+    "PATH_STR = 'path'\n",
+    "\n",
+    "STR_BAND_NAME = 'band'\n",
+    "STR_MEAN = 'mean'\n",
+    "STR_STD = 'std'"
    ]
   },
   {
