--- a/nbs/statistics.ipynb
+++ b/nbs/statistics.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,8 @@
     "     Returns:\n",
     "     string: Name of the region , extracted from the tile name \n",
     "     \"\"\"\n",
-    "     \n",
-    "     region = tile_name.split(CONST.SPLIT_TILES_NAMES_STR)[0]\n",
+    "     region = tile_name.split(CONST.SPLIT_TILES_NAMES_STR1)[-1].split(CONST.SPLIT_TILES_NAMES_STR2)[0]\n",
+    "   #   region = tile_name.split(CONST.SPLIT_TILES_NAMES_STR)[0]\n",
     "     return region\n",
     "  \n",
     "\n",
@@ -157,18 +157,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 80/399 [00:05<00:23, 13.35it/s]C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_6200\\1863059929.py:60: RuntimeWarning: Mean of empty slice\n",
+      " 20%|██        | 80/399 [00:05<00:22, 14.24it/s]C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_6200\\1971452540.py:60: RuntimeWarning: Mean of empty slice\n",
       "  mean = np.nanmean(arr)\n",
       "d:\\git\\flood_exercise\\.venv\\Lib\\site-packages\\numpy\\lib\\nanfunctions.py:1879: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
       "  var = nanvar(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
-      "100%|██████████| 399/399 [00:37<00:00, 10.74it/s]\n"
+      "100%|██████████| 399/399 [00:28<00:00, 13.93it/s]\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "[399 rows x 26 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -595,28 +595,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[D:\\git\\flood_exercise\\S2\\Nigeria_417184_S2Han...</td>\n",
-       "      <td>[D:\\git\\flood]</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Nigeria_417184_S2Hand...</td>\n",
+       "      <td>Nigeria</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[D:\\git\\flood_exercise\\S2\\Mekong_1396181_S2Han...</td>\n",
-       "      <td>[D:\\git\\flood]</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Mekong_1396181_S2Hand...</td>\n",
+       "      <td>Mekong</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>[D:\\git\\flood_exercise\\S2\\Mekong_1191208_S2Han...</td>\n",
-       "      <td>[D:\\git\\flood]</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Mekong_1191208_S2Hand...</td>\n",
+       "      <td>Mekong</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[D:\\git\\flood_exercise\\S2\\Mekong_1248200_S2Han...</td>\n",
-       "      <td>[D:\\git\\flood]</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Mekong_1248200_S2Hand...</td>\n",
+       "      <td>Mekong</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>[D:\\git\\flood_exercise\\S2\\India_900498_S2Hand....</td>\n",
-       "      <td>[D:\\git\\flood]</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\India_900498_S2Hand.tif</td>\n",
+       "      <td>India</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -625,28 +625,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>394</th>\n",
-       "      <td>[D:\\git\\flood_exercise\\S2\\USA_741178_S2Hand.tif]</td>\n",
-       "      <td>[D:\\git\\flood]</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_741178_S2Hand.tif</td>\n",
+       "      <td>USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>395</th>\n",
-       "      <td>[D:\\git\\flood_exercise\\S2\\USA_761032_S2Hand.tif]</td>\n",
-       "      <td>[D:\\git\\flood]</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_761032_S2Hand.tif</td>\n",
+       "      <td>USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>396</th>\n",
-       "      <td>[D:\\git\\flood_exercise\\S2\\USA_955053_S2Hand.tif]</td>\n",
-       "      <td>[D:\\git\\flood]</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_955053_S2Hand.tif</td>\n",
+       "      <td>USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>397</th>\n",
-       "      <td>[D:\\git\\flood_exercise\\S2\\USA_986268_S2Hand.tif]</td>\n",
-       "      <td>[D:\\git\\flood]</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_986268_S2Hand.tif</td>\n",
+       "      <td>USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>398</th>\n",
-       "      <td>[D:\\git\\flood_exercise\\S2\\USA_58086_S2Hand.tif]</td>\n",
-       "      <td>[D:\\git\\flood]</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_58086_S2Hand.tif</td>\n",
+       "      <td>USA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -654,70 +654,66 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                  path          region\n",
-       "0    [D:\\git\\flood_exercise\\S2\\Nigeria_417184_S2Han...  [D:\\git\\flood]\n",
-       "1    [D:\\git\\flood_exercise\\S2\\Mekong_1396181_S2Han...  [D:\\git\\flood]\n",
-       "2    [D:\\git\\flood_exercise\\S2\\Mekong_1191208_S2Han...  [D:\\git\\flood]\n",
-       "3    [D:\\git\\flood_exercise\\S2\\Mekong_1248200_S2Han...  [D:\\git\\flood]\n",
-       "4    [D:\\git\\flood_exercise\\S2\\India_900498_S2Hand....  [D:\\git\\flood]\n",
-       "..                                                 ...             ...\n",
-       "394   [D:\\git\\flood_exercise\\S2\\USA_741178_S2Hand.tif]  [D:\\git\\flood]\n",
-       "395   [D:\\git\\flood_exercise\\S2\\USA_761032_S2Hand.tif]  [D:\\git\\flood]\n",
-       "396   [D:\\git\\flood_exercise\\S2\\USA_955053_S2Hand.tif]  [D:\\git\\flood]\n",
-       "397   [D:\\git\\flood_exercise\\S2\\USA_986268_S2Hand.tif]  [D:\\git\\flood]\n",
-       "398    [D:\\git\\flood_exercise\\S2\\USA_58086_S2Hand.tif]  [D:\\git\\flood]\n",
+       "                                                  path   region\n",
+       "0    D:\\git\\flood_exercise\\S2\\Nigeria_417184_S2Hand...  Nigeria\n",
+       "1    D:\\git\\flood_exercise\\S2\\Mekong_1396181_S2Hand...   Mekong\n",
+       "2    D:\\git\\flood_exercise\\S2\\Mekong_1191208_S2Hand...   Mekong\n",
+       "3    D:\\git\\flood_exercise\\S2\\Mekong_1248200_S2Hand...   Mekong\n",
+       "4     D:\\git\\flood_exercise\\S2\\India_900498_S2Hand.tif    India\n",
+       "..                                                 ...      ...\n",
+       "394     D:\\git\\flood_exercise\\S2\\USA_741178_S2Hand.tif      USA\n",
+       "395     D:\\git\\flood_exercise\\S2\\USA_761032_S2Hand.tif      USA\n",
+       "396     D:\\git\\flood_exercise\\S2\\USA_955053_S2Hand.tif      USA\n",
+       "397     D:\\git\\flood_exercise\\S2\\USA_986268_S2Hand.tif      USA\n",
+       "398      D:\\git\\flood_exercise\\S2\\USA_58086_S2Hand.tif      USA\n",
        "\n",
        "[399 rows x 2 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(instance.collect_info)"
+    "pd.DataFrame(instance.collect_info)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'B1_mean': 1239.0223770141602,\n",
-       " 'B1_std': 61.850259377173444,\n",
-       " 'B2_mean': 1005.351676940918,\n",
-       " 'B2_std': 109.57572800410017,\n",
-       " 'B3_mean': 992.5823135375977,\n",
-       " 'B3_std': 112.37471722557271,\n",
-       " 'B4_mean': 745.489673614502,\n",
-       " 'B4_std': 213.0760790932306,\n",
-       " 'B5_mean': 1155.1354446411133,\n",
-       " 'B5_std': 137.24980906909343,\n",
-       " 'B6_mean': 2306.977508544922,\n",
-       " 'B6_std': 527.7705820693158,\n",
-       " 'B7_mean': 2789.410358428955,\n",
-       " 'B7_std': 704.7507154022319,\n",
-       " 'B8_mean': 2728.2283210754395,\n",
-       " 'B8_std': 719.1362577241765,\n",
-       " 'B8A_mean': 3041.546073913574,\n",
-       " 'B8A_std': 789.5673801534776,\n",
-       " 'B9_mean': 752.2153434753418,\n",
-       " 'B9_std': 175.4419180747796,\n",
-       " 'B10_mean': 12.022579193115234,\n",
-       " 'B10_std': 1.1647461449336822,\n",
-       " 'B11_mean': 1806.3060455322266,\n",
-       " 'B11_std': 496.5387250067066,\n",
-       " 'B12_mean': 923.8802452087402,\n",
-       " 'B12_std': 334.05652809072444}"
+       "['Nigeria', '417184', 'S2Hand.tif']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str.split(\"\\\\\")[-1].split('_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ImgsStatistics' object has no attribute 'test'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[52], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dici \u001b[38;5;241m=\u001b[39m\u001b[43minstance\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest\u001b[49m\n\u001b[0;32m      2\u001b[0m dici\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ImgsStatistics' object has no attribute 'test'"
+     ]
     }
    ],
    "source": [
