changed load files function in utilitis

--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "#|export\n",
     "\n",
-    "GET_TIF_STR = \"*.tif\"\n",
+    "GET_FILE_STR = \"*.tif\"\n",
     "\n",
     "SPLIT_TILES_NAMES_STR2 = '_'\n",
     "SPLIT_TILES_NAMES_STR1 = \"\\\\\"\n",
