--- a/nbs/utilities.ipynb
+++ b/nbs/utilities.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
     "\n",
     "def load_tif_paths(\n",
-    "    tif_path : str , # path to the folder where all the tifs are located\n",
+    "    path : str , # path to the folder where all the tifs are located\n",
+    "    filter_file : bool , # when True, only file with suffix GET_FILE_STR will be listed\n",
+    "    \n",
     "    )-> list :\n",
     "\n",
     "    \"\"\"\n",
@@ -62,8 +64,14 @@
     "        list: A list of paths that can be read by rasterio.\n",
     "    \"\"\"\n",
     "    path_list = []\n",
-    "    for file in glob.glob(tif_path+'/'+CONST.GET_TIF_STR):\n",
-    "        path_list.append(file)\n",
+    "    if filter_file:\n",
+    "        \n",
+    "        for file in glob.glob(path+'/'+CONST.GET_TIF_STR):\n",
+    "            path_list.append(file)\n",
+    "    else:\n",
+    "        for file in glob.glob(path+'/*'):\n",
+    "            path_list.append(file)\n",
+    "\n",
     "\n",
     "    return path_list"
    ]
@@ -77,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -484,22 +492,41 @@
        " 'D:\\\\git\\\\flood_exercise\\\\S2\\\\USA_58086_S2Hand.tif']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list_of_files=load_tif_paths(tif_path=r\"D:\\git\\flood_exercise\\S2\")\n",
+    "list_of_files=load_tif_paths(path=r\"D:\\git\\flood_exercise\\S2\",\n",
+    "                             filter_file = True)\n",
     "list_of_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['D:\\\\git\\\\flood_exercise\\\\split\\\\flood_handlabeled\\\\flood_test_data.csv',\n",
+       " 'D:\\\\git\\\\flood_exercise\\\\split\\\\flood_handlabeled\\\\flood_bolivia_data.csv',\n",
+       " 'D:\\\\git\\\\flood_exercise\\\\split\\\\flood_handlabeled\\\\flood_train_data.csv',\n",
+       " 'D:\\\\git\\\\flood_exercise\\\\split\\\\flood_handlabeled\\\\flood_valid_data.csv']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_files=load_tif_paths(path=r\"D:\\git\\flood_exercise\\split\\flood_handlabeled\",\n",
+    "                             filter_file = False)\n",
+    "list_of_files"
+   ]
   },
   {
    "cell_type": "code",
