added column for join with the split data

--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,10 +48,14 @@
     "\n",
     "REGION_STR ='region'\n",
     "PATH_STR = 'path'\n",
+    "JOIN_COL_NAME = 'name_for_join'\n",
     "\n",
     "STR_BAND_NAME = 'band'\n",
     "STR_MEAN = 'mean'\n",
-    "STR_STD = 'std'"
+    "STR_STD = 'std'\n",
+    "\n",
+    "DF_ID_COL_NAME = 'id'\n",
+    "SPLIT_COL_NAME ='split'"
    ]
   },
   {
