--- a/nbs/utilities.ipynb
+++ b/nbs/utilities.ipynb
@@ -41,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
     "\n",
-    "def load_tif_paths(\n",
+    "def load_list_paths(\n",
     "    path : str , # path to the folder where all the tifs are located\n",
     "    filter_file : bool , # when True, only file with suffix GET_FILE_STR will be listed\n",
     "    \n",
@@ -66,7 +66,7 @@
     "    path_list = []\n",
     "    if filter_file:\n",
     "        \n",
-    "        for file in glob.glob(path+'/'+CONST.GET_TIF_STR):\n",
+    "        for file in glob.glob(path+'/'+CONST.GET_FILE_STR):\n",
     "            path_list.append(file)\n",
     "    else:\n",
     "        for file in glob.glob(path+'/*'):\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -492,20 +492,20 @@
        " 'D:\\\\git\\\\flood_exercise\\\\S2\\\\USA_58086_S2Hand.tif']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list_of_files=load_tif_paths(path=r\"D:\\git\\flood_exercise\\S2\",\n",
+    "list_of_files=load_list_paths(path=r\"D:\\git\\flood_exercise\\S2\",\n",
     "                             filter_file = True)\n",
     "list_of_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -517,13 +517,13 @@
        " 'D:\\\\git\\\\flood_exercise\\\\split\\\\flood_handlabeled\\\\flood_valid_data.csv']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list_of_files=load_tif_paths(path=r\"D:\\git\\flood_exercise\\split\\flood_handlabeled\",\n",
+    "list_of_files=load_list_paths(path=r\"D:\\git\\flood_exercise\\split\\flood_handlabeled\",\n",
     "                             filter_file = False)\n",
     "list_of_files"
    ]
