print unique values per columns region and split

--- a/nbs/statistics.ipynb
+++ b/nbs/statistics.ipynb
@@ -75,6 +75,8 @@
     "                                        how = 'left').drop_duplicates(subset = CONST.PATH_STR)\n",
     "      self.results.drop(CONST.DF_ID_COL_NAME,axis=1,inplace=True)\n",
     "\n",
+    "      print(self.results[CONST.REGION_STR].value_counts())\n",
+    "      print(self.results[CONST.SPLIT_COL_NAME].value_counts())\n",
     "\n",
     "\n",
     "  def _get_split_data_(self):\n",
@@ -597,10 +599,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "instance.results.to_csv(r'D:\\git\\flood_exercise\\RESULTS\\imgs_stats.csv')"
+   ]
   },
   {
    "cell_type": "code",
