added NDWI notebooks, waiting to understand the task better

--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
-    "\n",
+    "# task 1 constants\n",
     "GET_FILE_STR = \"*.tif\"\n",
     "\n",
     "SPLIT_TILES_NAMES_STR2 = '_'\n",
@@ -56,6 +56,18 @@
     "\n",
     "DF_ID_COL_NAME = 'id'\n",
     "SPLIT_COL_NAME ='split'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "# task 2 constants\n",
+    "GREEN_BAND =3\n",
+    "NIR_BAND = 8\n"
    ]
   },
   {
