--- a/nbs/statistics.ipynb
+++ b/nbs/statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,24 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_12800\\399268847.py:5: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#|export\n",
     "\n",
@@ -62,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,10 +74,11 @@
     "      self.results = self.img_stats_df.merge(self.split_dfs, on=CONST.JOIN_COL_NAME,\n",
     "                                        how = 'left').drop_duplicates(subset = CONST.PATH_STR)\n",
     "      self.results.drop(CONST.DF_ID_COL_NAME,axis=1,inplace=True)\n",
+    "      self.results.reset_index(inplace=True)\n",
     "\n",
     "      self.count_regions = pd.DataFrame(self.results[CONST.REGION_STR].value_counts())\n",
     "      self.count_split = pd.DataFrame(self.results[CONST.SPLIT_COL_NAME].value_counts())\n",
-    "\n",
+    "      \n",
     "\n",
     "  def _get_split_data_(self):\n",
     "\n",
@@ -114,7 +100,7 @@
     "         split_dfs = pd.concat(self.collect_dfs)\n",
     "\n",
     "         split_dfs[CONST.JOIN_COL_NAME]= split_dfs[CONST.DF_ID_COL_NAME].str.split(CONST.SPLIT_TILES_NAMES_STR2).str[:2].str.join(CONST.SPLIT_TILES_NAMES_STR2)\n",
-    "\n",
+    "         \n",
     "\n",
     "      return split_dfs\n",
     "\n",
@@ -202,9 +188,408 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 80/399 [00:12<00:52,  6.10it/s]C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_1960\\814585146.py:88: RuntimeWarning: Mean of empty slice\n",
+      "  mean = np.nanmean(arr)\n",
+      "d:\\git\\flood_exercise\\.venv\\Lib\\site-packages\\numpy\\lib\\nanfunctions.py:1879: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
+      "  var = nanvar(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "100%|██████████| 399/399 [00:59<00:00,  6.73it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>path</th>\n",
+       "      <th>region</th>\n",
+       "      <th>index</th>\n",
+       "      <th>B1_mean</th>\n",
+       "      <th>B1_std</th>\n",
+       "      <th>B2_mean</th>\n",
+       "      <th>B2_std</th>\n",
+       "      <th>B3_mean</th>\n",
+       "      <th>B3_std</th>\n",
+       "      <th>B4_mean</th>\n",
+       "      <th>...</th>\n",
+       "      <th>B9_mean</th>\n",
+       "      <th>B9_std</th>\n",
+       "      <th>B10_mean</th>\n",
+       "      <th>B10_std</th>\n",
+       "      <th>B11_mean</th>\n",
+       "      <th>B11_std</th>\n",
+       "      <th>B12_mean</th>\n",
+       "      <th>B12_std</th>\n",
+       "      <th>name_for_join</th>\n",
+       "      <th>split</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Nigeria_417184_S2Hand...</td>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2045.121361</td>\n",
+       "      <td>366.960304</td>\n",
+       "      <td>1839.157126</td>\n",
+       "      <td>391.249278</td>\n",
+       "      <td>1811.085734</td>\n",
+       "      <td>379.863595</td>\n",
+       "      <td>1753.377412</td>\n",
+       "      <td>...</td>\n",
+       "      <td>953.190210</td>\n",
+       "      <td>387.732510</td>\n",
+       "      <td>159.752287</td>\n",
+       "      <td>74.063205</td>\n",
+       "      <td>2718.732305</td>\n",
+       "      <td>552.134430</td>\n",
+       "      <td>2072.346645</td>\n",
+       "      <td>544.698418</td>\n",
+       "      <td>Nigeria_417184</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Mekong_1396181_S2Hand...</td>\n",
+       "      <td>Mekong</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1572.750298</td>\n",
+       "      <td>238.176893</td>\n",
+       "      <td>1345.034756</td>\n",
+       "      <td>289.717047</td>\n",
+       "      <td>1332.743843</td>\n",
+       "      <td>317.775426</td>\n",
+       "      <td>1168.033314</td>\n",
+       "      <td>...</td>\n",
+       "      <td>243.451187</td>\n",
+       "      <td>109.609274</td>\n",
+       "      <td>37.857872</td>\n",
+       "      <td>34.112022</td>\n",
+       "      <td>1040.482773</td>\n",
+       "      <td>586.654512</td>\n",
+       "      <td>626.226967</td>\n",
+       "      <td>345.350598</td>\n",
+       "      <td>Mekong_1396181</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Mekong_1191208_S2Hand...</td>\n",
+       "      <td>Mekong</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013.734406</td>\n",
+       "      <td>1151.946099</td>\n",
+       "      <td>1772.196365</td>\n",
+       "      <td>1256.893949</td>\n",
+       "      <td>1716.215126</td>\n",
+       "      <td>1234.393483</td>\n",
+       "      <td>1531.988964</td>\n",
+       "      <td>...</td>\n",
+       "      <td>371.368935</td>\n",
+       "      <td>187.097016</td>\n",
+       "      <td>9.684616</td>\n",
+       "      <td>2.510644</td>\n",
+       "      <td>2307.633781</td>\n",
+       "      <td>1232.076664</td>\n",
+       "      <td>1301.098717</td>\n",
+       "      <td>1043.084131</td>\n",
+       "      <td>Mekong_1191208</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Mekong_1248200_S2Hand...</td>\n",
+       "      <td>Mekong</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1442.364147</td>\n",
+       "      <td>138.868240</td>\n",
+       "      <td>1294.289673</td>\n",
+       "      <td>217.404070</td>\n",
+       "      <td>1417.947430</td>\n",
+       "      <td>285.272892</td>\n",
+       "      <td>1388.561562</td>\n",
+       "      <td>...</td>\n",
+       "      <td>108.150059</td>\n",
+       "      <td>67.019372</td>\n",
+       "      <td>5.705055</td>\n",
+       "      <td>1.241582</td>\n",
+       "      <td>596.679100</td>\n",
+       "      <td>549.332932</td>\n",
+       "      <td>323.786411</td>\n",
+       "      <td>281.757341</td>\n",
+       "      <td>Mekong_1248200</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\India_900498_S2Hand.tif</td>\n",
+       "      <td>India</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1489.600925</td>\n",
+       "      <td>118.475460</td>\n",
+       "      <td>1286.906940</td>\n",
+       "      <td>166.706857</td>\n",
+       "      <td>1264.285282</td>\n",
+       "      <td>187.111246</td>\n",
+       "      <td>1204.147636</td>\n",
+       "      <td>...</td>\n",
+       "      <td>102.980587</td>\n",
+       "      <td>43.379124</td>\n",
+       "      <td>7.087765</td>\n",
+       "      <td>1.656915</td>\n",
+       "      <td>1049.212807</td>\n",
+       "      <td>853.856596</td>\n",
+       "      <td>665.331821</td>\n",
+       "      <td>590.233659</td>\n",
+       "      <td>India_900498</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>788</th>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_741178_S2Hand.tif</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1335.008938</td>\n",
+       "      <td>242.002314</td>\n",
+       "      <td>1156.158051</td>\n",
+       "      <td>366.925566</td>\n",
+       "      <td>1165.635044</td>\n",
+       "      <td>378.320440</td>\n",
+       "      <td>1097.614441</td>\n",
+       "      <td>...</td>\n",
+       "      <td>963.875763</td>\n",
+       "      <td>149.946729</td>\n",
+       "      <td>12.606197</td>\n",
+       "      <td>1.407922</td>\n",
+       "      <td>2408.852219</td>\n",
+       "      <td>713.517056</td>\n",
+       "      <td>1494.073376</td>\n",
+       "      <td>675.028190</td>\n",
+       "      <td>USA_741178</td>\n",
+       "      <td>valid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>790</th>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_761032_S2Hand.tif</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1211.460930</td>\n",
+       "      <td>60.073873</td>\n",
+       "      <td>957.013645</td>\n",
+       "      <td>101.266215</td>\n",
+       "      <td>960.577333</td>\n",
+       "      <td>103.557143</td>\n",
+       "      <td>685.778290</td>\n",
+       "      <td>...</td>\n",
+       "      <td>945.488744</td>\n",
+       "      <td>209.771066</td>\n",
+       "      <td>10.903004</td>\n",
+       "      <td>1.085587</td>\n",
+       "      <td>1821.383298</td>\n",
+       "      <td>473.622415</td>\n",
+       "      <td>931.870198</td>\n",
+       "      <td>354.322564</td>\n",
+       "      <td>USA_761032</td>\n",
+       "      <td>valid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>792</th>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_955053_S2Hand.tif</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1277.548512</td>\n",
+       "      <td>59.184389</td>\n",
+       "      <td>1032.082386</td>\n",
+       "      <td>102.587972</td>\n",
+       "      <td>992.515831</td>\n",
+       "      <td>108.127801</td>\n",
+       "      <td>855.138050</td>\n",
+       "      <td>...</td>\n",
+       "      <td>683.315823</td>\n",
+       "      <td>231.303370</td>\n",
+       "      <td>13.719379</td>\n",
+       "      <td>5.158683</td>\n",
+       "      <td>1724.935505</td>\n",
+       "      <td>637.995502</td>\n",
+       "      <td>954.246548</td>\n",
+       "      <td>425.050670</td>\n",
+       "      <td>USA_955053</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>794</th>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_986268_S2Hand.tif</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1244.628212</td>\n",
+       "      <td>48.008136</td>\n",
+       "      <td>994.853779</td>\n",
+       "      <td>91.446819</td>\n",
+       "      <td>996.123226</td>\n",
+       "      <td>104.907798</td>\n",
+       "      <td>765.239330</td>\n",
+       "      <td>...</td>\n",
+       "      <td>808.566460</td>\n",
+       "      <td>144.699138</td>\n",
+       "      <td>10.382317</td>\n",
+       "      <td>1.186718</td>\n",
+       "      <td>1949.497345</td>\n",
+       "      <td>432.971810</td>\n",
+       "      <td>1000.108887</td>\n",
+       "      <td>277.715240</td>\n",
+       "      <td>USA_986268</td>\n",
+       "      <td>valid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796</th>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_58086_S2Hand.tif</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1239.022377</td>\n",
+       "      <td>61.850259</td>\n",
+       "      <td>1005.351677</td>\n",
+       "      <td>109.575728</td>\n",
+       "      <td>992.582314</td>\n",
+       "      <td>112.374717</td>\n",
+       "      <td>745.489674</td>\n",
+       "      <td>...</td>\n",
+       "      <td>752.215343</td>\n",
+       "      <td>175.441918</td>\n",
+       "      <td>12.022579</td>\n",
+       "      <td>1.164746</td>\n",
+       "      <td>1806.306046</td>\n",
+       "      <td>496.538725</td>\n",
+       "      <td>923.880245</td>\n",
+       "      <td>334.056528</td>\n",
+       "      <td>USA_58086</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>399 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  path   region  index  \\\n",
+       "0    D:\\git\\flood_exercise\\S2\\Nigeria_417184_S2Hand...  Nigeria      0   \n",
+       "2    D:\\git\\flood_exercise\\S2\\Mekong_1396181_S2Hand...   Mekong      0   \n",
+       "4    D:\\git\\flood_exercise\\S2\\Mekong_1191208_S2Hand...   Mekong      0   \n",
+       "6    D:\\git\\flood_exercise\\S2\\Mekong_1248200_S2Hand...   Mekong      0   \n",
+       "8     D:\\git\\flood_exercise\\S2\\India_900498_S2Hand.tif    India      0   \n",
+       "..                                                 ...      ...    ...   \n",
+       "788     D:\\git\\flood_exercise\\S2\\USA_741178_S2Hand.tif      USA      0   \n",
+       "790     D:\\git\\flood_exercise\\S2\\USA_761032_S2Hand.tif      USA      0   \n",
+       "792     D:\\git\\flood_exercise\\S2\\USA_955053_S2Hand.tif      USA      0   \n",
+       "794     D:\\git\\flood_exercise\\S2\\USA_986268_S2Hand.tif      USA      0   \n",
+       "796      D:\\git\\flood_exercise\\S2\\USA_58086_S2Hand.tif      USA      0   \n",
+       "\n",
+       "         B1_mean       B1_std      B2_mean       B2_std      B3_mean  \\\n",
+       "0    2045.121361   366.960304  1839.157126   391.249278  1811.085734   \n",
+       "2    1572.750298   238.176893  1345.034756   289.717047  1332.743843   \n",
+       "4    2013.734406  1151.946099  1772.196365  1256.893949  1716.215126   \n",
+       "6    1442.364147   138.868240  1294.289673   217.404070  1417.947430   \n",
+       "8    1489.600925   118.475460  1286.906940   166.706857  1264.285282   \n",
+       "..           ...          ...          ...          ...          ...   \n",
+       "788  1335.008938   242.002314  1156.158051   366.925566  1165.635044   \n",
+       "790  1211.460930    60.073873   957.013645   101.266215   960.577333   \n",
+       "792  1277.548512    59.184389  1032.082386   102.587972   992.515831   \n",
+       "794  1244.628212    48.008136   994.853779    91.446819   996.123226   \n",
+       "796  1239.022377    61.850259  1005.351677   109.575728   992.582314   \n",
+       "\n",
+       "          B3_std      B4_mean  ...     B9_mean      B9_std    B10_mean  \\\n",
+       "0     379.863595  1753.377412  ...  953.190210  387.732510  159.752287   \n",
+       "2     317.775426  1168.033314  ...  243.451187  109.609274   37.857872   \n",
+       "4    1234.393483  1531.988964  ...  371.368935  187.097016    9.684616   \n",
+       "6     285.272892  1388.561562  ...  108.150059   67.019372    5.705055   \n",
+       "8     187.111246  1204.147636  ...  102.980587   43.379124    7.087765   \n",
+       "..           ...          ...  ...         ...         ...         ...   \n",
+       "788   378.320440  1097.614441  ...  963.875763  149.946729   12.606197   \n",
+       "790   103.557143   685.778290  ...  945.488744  209.771066   10.903004   \n",
+       "792   108.127801   855.138050  ...  683.315823  231.303370   13.719379   \n",
+       "794   104.907798   765.239330  ...  808.566460  144.699138   10.382317   \n",
+       "796   112.374717   745.489674  ...  752.215343  175.441918   12.022579   \n",
+       "\n",
+       "       B10_std     B11_mean      B11_std     B12_mean      B12_std  \\\n",
+       "0    74.063205  2718.732305   552.134430  2072.346645   544.698418   \n",
+       "2    34.112022  1040.482773   586.654512   626.226967   345.350598   \n",
+       "4     2.510644  2307.633781  1232.076664  1301.098717  1043.084131   \n",
+       "6     1.241582   596.679100   549.332932   323.786411   281.757341   \n",
+       "8     1.656915  1049.212807   853.856596   665.331821   590.233659   \n",
+       "..         ...          ...          ...          ...          ...   \n",
+       "788   1.407922  2408.852219   713.517056  1494.073376   675.028190   \n",
+       "790   1.085587  1821.383298   473.622415   931.870198   354.322564   \n",
+       "792   5.158683  1724.935505   637.995502   954.246548   425.050670   \n",
+       "794   1.186718  1949.497345   432.971810  1000.108887   277.715240   \n",
+       "796   1.164746  1806.306046   496.538725   923.880245   334.056528   \n",
+       "\n",
+       "      name_for_join  split  \n",
+       "0    Nigeria_417184   test  \n",
+       "2    Mekong_1396181  train  \n",
+       "4    Mekong_1191208  train  \n",
+       "6    Mekong_1248200  train  \n",
+       "8      India_900498   test  \n",
+       "..              ...    ...  \n",
+       "788      USA_741178  valid  \n",
+       "790      USA_761032  valid  \n",
+       "792      USA_955053  train  \n",
+       "794      USA_986268  valid  \n",
+       "796       USA_58086  train  \n",
+       "\n",
+       "[399 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "instance = ImgsStatistics(\n",
     "  path_to_imgs = r'D:\\git\\flood_exercise\\S2',\n",
