Adding dataframe with water eprc data

--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -67,7 +67,12 @@
     "#|export\n",
     "# task 2 constants\n",
     "GREEN_BAND =3\n",
-    "NIR_BAND = 8\n"
+    "NIR_BAND = 8\n",
+    "\n",
+    "# names for water percentage columns\n",
+    "\n",
+    "IMG_PATH_WATER_STR = 'img_path'\n",
+    "WATER_PERC_STR = 'percentage_water'\n"
    ]
   },
   {
@@ -94,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
