--- a/nbs/NDWI.ipynb
+++ b/nbs/NDWI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,13 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#|export\n",
     "import rasterio\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
     "\n",
     "from flood_exercise import utils_func\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,24 +60,14 @@
     "     self.list_of_files = utils_func.load_list_paths(path_to_imgs,filter_file = True)\n",
     "     self.list_of_files = [x for x in self.list_of_files if 'Bolivia' in x]\n",
     "     \n",
-    "     collector = {'img_path' : [] , 'percentage_water' : []}\n",
+    "     collector = {CONST.IMG_PATH_WATER_STR : [] , CONST.WATER_PERC_STR : []}\n",
     "     # calculate NDWI and NDWI mask per image\n",
-    "     for path in self.list_of_files[:3]:\n",
+    "     for path in self.list_of_files:\n",
     "         self.ndwi_img ,self.mask , self.perc_water = self._ndwi_s2_(path)\n",
-    "         #TODO  - create const vals and make it nicer\n",
-    "         collector['img_path'].append(path)\n",
-    "         collector['percentage_water'].append(self.perc_water)\n",
-    "         self.collect_info[CONST.PATH_STR].append(path)\n",
-    "        #  plt.imshow(self.ndwi_img, vmin = -1, vmax =1)\n",
-    "        #  plt.title(path)\n",
-    "        #  plt.colorbar()\n",
-    "        #  plt.show()\n",
-    "        #  plt.title(path)\n",
-    "        #  plt.imshow(self.mask,vmin=0,vmax=1)\n",
-    "        #  plt.colorbar()\n",
-    "        #  plt.show()\n",
+    "         collector[CONST.IMG_PATH_WATER_STR].append(path)\n",
+    "         collector[CONST.WATER_PERC_STR].append(self.perc_water)\n",
     "\n",
-    "\n",
+    "     self.water_perc = pd.DataFrame(collector)\n",
     "           \n",
     "  def _ndwi_s2_(self ,\n",
     "                     path):\n",
@@ -96,7 +87,6 @@
     "            # count_water_pixels = np.sum(mask)\n",
     "            # total_pixels = mask.shape[0]*mask.shape[1]\n",
     "            perc_water = round((np.sum(mask) / (mask.shape[0]*mask.shape[1]))*100,2)\n",
-    "            print(perc_water)\n",
     "         return ndwi , mask ,perc_water\n",
     "     \n",
     "\n",
@@ -105,29 +95,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.02\n",
-      "14.19\n",
-      "3.64\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_15392\\2763685084.py:35: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_15656\\3637247484.py:29: RuntimeWarning: invalid value encountered in divide\n",
       "  ndwi = (green - nir) / (green + nir)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>img_path</th>\n",
+       "      <th>percentage_water</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.02</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_76104_S2Hand.tif</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14.19</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_103757_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.64</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_60373_S2Hand.tif</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33.57</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_432776_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.10</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_360519_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>66.69</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_129334_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.12</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_233925_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>39.74</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_314919_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6.80</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_294583_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2.76</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_23014_S2Hand.tif</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>3.38</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_379434_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.08</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_195474_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>4.27</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_290290_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>8.71</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_242570_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>3.74</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Bolivia_312675_S2Hand...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    img_path                                   percentage_water\n",
+       "0       0.02  D:\\git\\flood_exercise\\S2\\Bolivia_76104_S2Hand.tif\n",
+       "1      14.19  D:\\git\\flood_exercise\\S2\\Bolivia_103757_S2Hand...\n",
+       "2       3.64  D:\\git\\flood_exercise\\S2\\Bolivia_60373_S2Hand.tif\n",
+       "3      33.57  D:\\git\\flood_exercise\\S2\\Bolivia_432776_S2Hand...\n",
+       "4       0.10  D:\\git\\flood_exercise\\S2\\Bolivia_360519_S2Hand...\n",
+       "5      66.69  D:\\git\\flood_exercise\\S2\\Bolivia_129334_S2Hand...\n",
+       "6       0.12  D:\\git\\flood_exercise\\S2\\Bolivia_233925_S2Hand...\n",
+       "7      39.74  D:\\git\\flood_exercise\\S2\\Bolivia_314919_S2Hand...\n",
+       "8       6.80  D:\\git\\flood_exercise\\S2\\Bolivia_294583_S2Hand...\n",
+       "9       2.76  D:\\git\\flood_exercise\\S2\\Bolivia_23014_S2Hand.tif\n",
+       "10      3.38  D:\\git\\flood_exercise\\S2\\Bolivia_379434_S2Hand...\n",
+       "11      0.08  D:\\git\\flood_exercise\\S2\\Bolivia_195474_S2Hand...\n",
+       "12      4.27  D:\\git\\flood_exercise\\S2\\Bolivia_290290_S2Hand...\n",
+       "13      8.71  D:\\git\\flood_exercise\\S2\\Bolivia_242570_S2Hand...\n",
+       "14      3.74  D:\\git\\flood_exercise\\S2\\Bolivia_312675_S2Hand..."
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "instance = ndwi(path_to_imgs = r\"D:\\git\\flood_exercise\\S2\")\n"
+    "instance = ndwi(path_to_imgs = r\"D:\\git\\flood_exercise\\S2\")\n",
+    "instance.water_perc"
    ]
   },
   {
