modifying NDWI script

--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -72,7 +72,10 @@
     "# names for water percentage columns\n",
     "\n",
     "IMG_PATH_WATER_STR = 'img_path'\n",
-    "WATER_PERC_STR = 'percentage_water'\n"
+    "WATER_PERC_STR = 'percentage_water'\n",
+    "\n",
+    "# Region name to for tile filtering\n",
+    "REGION_STR_2 = ' Bolivia'\n"
    ]
   },
   {
