--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -75,7 +75,10 @@
     "WATER_PERC_STR = 'percentage_water'\n",
     "\n",
     "# Region name to for tile filtering\n",
-    "REGION_STR_2 = 'Bolivia'\n"
+    "REGION_STR_2 = 'Bolivia'\n",
+    "\n",
+    "# water value pixel\n",
+    "WATER_VALUE = 1\n"
    ]
   },
   {
