--- a/nbs/NDWI.ipynb
+++ b/nbs/NDWI.ipynb
@@ -67,10 +67,19 @@
     "    #calculate threshold\n",
     "    self.threshold = self._get_ndwi_threshold_()\n",
     "\n",
-    "    # TODO iterate through images, get path and then calculate the water percentage in labels and in my calcualtion\n",
+    "    # iterate through sentinel-2 images , get % of water in label image and S2 image\n",
     "\n",
-    "    # #calculate ndwi and mask with new threshold\n",
-    "    # self.test=self._water_prob_new_imgs_()\n",
+    "    for s2_path in self.tiles_s2:\n",
+    "        #find the matching label tile \n",
+    "        path_id = s2_path.split(CONST.SPLIT_TILES_NAMES_STR1)[-1].split(CONST.SPLIT_TILES_NAMES_STR2)[1]\n",
+    "        match_label_tile_path = [x for x in self.labels if path_id in x][0]\n",
+    "\n",
+    "        #calculate NDWI for S2 image \n",
+    "        masked_ndwi,perc_water=self._water_prob_new_img_(path = s2_path)\n",
+    "\n",
+    "        #calculate water percentage in label image\n",
+    "        label_water_perc = self._water_perc_label_img_(path = match_label_tile_path)\n",
+    "\n",
     "\n",
     "\n",
     "  def _ndwi_s2_(self ,\n",
@@ -82,14 +91,7 @@
     "\n",
     "            ndwi = (green - nir) / (green + nir)\n",
     "\n",
-    "            # Replace NaN values with 0\n",
-    "            # ndwi = np.nan_to_num(ndwi, nan=-1)\n",
-    "            # # generate mask \n",
-    "            # mask = np.where(ndwi<0 ,0 ,1)\n",
-    "\n",
-    "            # #calculate precentage of water pixel out of all the pixels in the image\n",
-    "            # perc_water = round((np.sum(mask) / (mask.shape[0]*mask.shape[1]))*100,2)\n",
-    "         return ndwi #, mask ,perc_water\n",
+    "         return ndwi \n",
     "  \n",
     "\n",
     "\n",
@@ -175,16 +177,7 @@
     "          # printpercentage of pixels with water flag (value=1)\n",
     "          perc_water = round(( np.count_nonzero(arr == CONST.WATER_VALUE) / (arr.shape[0]*arr.shape[1]))*100,2)\n",
     "\n",
-    "\n",
-    "\n",
-    "          \n",
-    "          \n",
-    "      \n",
-    "      \n",
-    "          \n",
-    "          \n",
-    "          \n",
-    "      \n",
+    "      return perc_water\n",
     "\n",
     "     \n"
    ]
