start working on convert trf

--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "WATER_DF_TILE_ID_STR = 'tile_id'\n",
     "WATER_DF_PATH_STR = 'path'\n",
     "WATER_DF_WATER_PERC_STR = 'water_perc'\n",
-    "WATER_DF_WATER_PERC_LABEL_STR = 'water_str_label'\n"
+    "WATER_DF_WATER_PERC_LABEL_STR = 'water_label_perc'\n"
    ]
   },
   {
