created dataframe for train

--- a/nbs/train_ml.ipynb
+++ b/nbs/train_ml.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,43 +109,26 @@
     "        stacked_img = np.concatenate((s2_img, label_img), axis=0)\n",
     "        \n",
     "        df_pixels = pd.DataFrame(stacked_img.reshape([stacked_img.shape[0],-1]).T)\n",
+    "        df_pixels.columns = cols\n",
     "        dfs_pixels.append(df_pixels)\n",
     "\n",
     "      else:\n",
     "        continue\n",
+    "\n",
+    "    self.df_res = pd.concat(dfs_pixels)\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "instance = classification_pixels(path_imgs_str=r\"D:\\git\\flood_exercise\\S2\",\n",
     "                                 path_labels_str=r\"D:\\git\\flood_exercise\\S2_HANDLABELED\")\n",
-    "test = instance.stacked_img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14, 512, 512)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.shape"
+    "instance.df_res"
    ]
   },
   {
