adding ml classification - work in progress

--- a/nbs/CONSTANTS.ipynb
+++ b/nbs/CONSTANTS.ipynb
@@ -83,7 +83,8 @@
     "WATER_DF_TILE_ID_STR = 'tile_id'\n",
     "WATER_DF_PATH_STR = 'path'\n",
     "WATER_DF_WATER_PERC_STR = 'water_perc'\n",
-    "WATER_DF_WATER_PERC_LABEL_STR = 'water_label_perc'\n"
+    "WATER_DF_WATER_PERC_LABEL_STR = 'water_label_perc'\n",
+    "random_state = 42\n"
    ]
   },
   {
@@ -110,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
